# parallel-netcdf

./: .gitignore  .travis.yml  DEVELOPER_NOTES  INSTALL  config_cori.sh  config_cori_shared.sh  configure.ac  debug.sh  release.sh  runconfig_cori.sh  runconfig_local.sh  sneak_peek
benchmarks/C/: Makefile.am
benchmarks/FLASH-IO/: Makefile.am  bb.m4  bb.sl  checkpoint_ncmpi_parallel.F90  common.fh  expenv.sh  flash_benchmark_io.F90  gather.py  genscript.sh  log.m4  ncmpi.m4  nolog.m4  physicaldata.fh  plotfile_ncmpi_parallel.F90  run.sh  run.sl  stage.m4  stageout.c
doc/: README.CRAY  README_Datawarp  README_Datawarp_dev
doc/pnetcdf-api/: Makefile.am  c_api.tex  hints.tex
examples/C/: Makefile.am
examples/CXX/: Makefile.am
examples/F77/: Makefile.am
examples/datawarp/: Makefile.am  create_open.c  flash_benchmark_io.sl  nonblocking.c
m4/: libtool.m4
scripts/: config.guess  config.sub
src/binding/f77/: pnetcdf.inc.in
src/binding/f90/: api.fh.in  file.fh  visibility.fh
src/dispatchers/: file.c
src/drivers/: Makefile.am
src/drivers/common/: Makefile.am  accounting.c  error_posix2nc.c  logfile.c  stageout.c
src/drivers/include/: accounting.h  common.h
src/drivers/ncbbio/: .log.c.swp  Makefile  Makefile.am  Makefile.in  bb.h  log.c  log_check.c  log_flush.c  log_flush.m4  log_mem.c  ncbbio_attr.c  ncbbio_dim.c  ncbbio_driver.c  ncbbio_driver.h  ncbbio_file.c  ncbbio_io.c  ncbbio_log.c  ncbbio_log_flush.c  ncbbio_log_flush.m4  ncbbio_log_put.c  ncbbio_mem.c  ncbbio_nonblocking.c  ncbbio_util.c  ncbbio_var.c
src/drivers/ncbbio/.deps/: log.Plo  log_flush.Plo  log_mem.Plo  ncbbio_attr.Plo  ncbbio_dim.Plo  ncbbio_driver.Plo  ncbbio_file.Plo  ncbbio_var.Plo
src/drivers/ncdwio/: Makefile.am  bb.h  log_check.c  ncbbio_bufferedfile.c  ncdwio_bufferedfile.c  ncdwio_driver.h  ncdwio_file.c  ncdwio_io.c  ncdwio_log.c  ncdwio_log_flush.c  ncdwio_log_put.c  ncdwio_mem.c  ncdwio_nonblocking.c  ncdwio_sharedfile.c  ncdwio_util.c  ncdwio_var.c
src/drivers/nclogio/: Makefile.am  error.c  log.c  log.h  log_check.c  log_flush.c  log_flush.m4  log_mem.c  log_put.c  nclogio_attr.c  nclogio_close.c  nclogio_create.c  nclogio_dim.c  nclogio_dispatch.c  nclogio_dispatch.h  nclogio_driver.c  nclogio_driver.h  nclogio_enddef.c  nclogio_file.c  nclogio_put.c  nclogio_sync.c  nclogio_var.c  ncmpio.c
src/drivers/ncmpi/: Makefile.am  error.c  getput.m4  i_getput.m4  log.c  mpincio.c  mpinetcdf.c  nc.c  nc.h  ncio.h  nonblocking.c
src/drivers/ncmpio/: Makefile.am  dim.c  error.c  getput.m4  i_getput.m4  log.c  log.h  log_check.c  log_flush.m4  log_mem.c  mpincio.c  mpinetcdf.c  nc.c  nc.h  ncio.h  ncmpio_close.c  ncmpio_create.c  ncmpio_dispatch.c  ncmpio_dispatch.h  ncmpio_enddef.c  ncmpio_file.c  ncmpio_file_misc.c  ncmpio_i_varn.m4  ncmpio_open.c  ncmpio_sync.c  nonblocking.c  stageout.c  util.c
src/drivers/ncmpio/Legacy/: check_start_count_stride.c  fbits.h  filetype.c  header.c  m_getput_varx.m4  macro.h  misc.c  mpincio.c  mpinetcdf.c  ncio.h  ncmpidtype.h  rnd.h  string.c  swap.c  util.c  varn_api_header.m4  varnx.m4  varnx_api_header.m4
src/include/: dispatch.h  pnetcdf.h.in
src/libs/: Makefile.am
src/utils/: Makefile.am
src/utils/ncmpilogdump/: Makefile.am  ncmpilogdump.m4
src/utils/ncmpizip/: Makefile.am  common.c  common.h  ncmpizip.c  unzip.c  zip.c
test/: Makefile.am
test/F90/: Makefile.am
test/datawarp/: Makefile.am  dw_bsize.c  dw_hints.c  dw_nonblocking.c  highdim.c  log.c  wrap_runs.sh
test/largefile/: Makefile.am
test/nc_test/: Makefile.am
test/nonblocking/: i_varn_int64.c
test/testcases/: Makefile.am  bb_bsize.c  bb_hints  bb_hints.c  bb_nonblocking.c  dw_bsize.c  dw_hints.c  dw_many_reqs.c  dw_nonblocking.c  erange_fill.c  erange_fill.m4  iput_all_kinds.c  iput_all_kinds.m4  log.c  log_bsize.c  log_ctrl.m4  log_highdim.c  log_logfile.c  log_wait.c  logi.c  put_all_kinds.c  seq_runs.sh  seq_runs_dw.sh  test_erange.c  test_log.c  test_log_simple.c  test_logi.c  wait.c  wrap_runs_dw.sh
